@@ -1,5 +1,5 @@
 /******************************************************************************
-    (c) 2002-2006      Christine Caulfield          christine.caulfield@googlemail.com
+    (c) 2002-2008      Christine Caulfield          christine.caulfield@googlemail.com
 
     This program is free software; you can redistribute it and/or modify
     it under the terms of the GNU General Public License as published by
